--- a/sidebars.yaml
+++ b/sidebars.yaml
@@ -29,7 +29,7 @@ training:
         page:  developer-portal/docs/references/rippled-api/admin-rippled-methods/admin-rippled-methods.md
       - label: Public rippled methods
         page:  developer-portal/docs/references/rippled-api/public-rippled-methods/account-methods/account_channels.md
-- group: Dev Tools
+  - group: Dev Tools
     expanded: true
     pages:
       - label: Developer Tools
@@ -38,7 +38,7 @@ training:
     expanded: true
     pages:
       - label: XRP Ledger Quickstart
-        page: developer-portal/docs/tutorials/quickstart/xrpl-quickstart.md       
+        page: developer-portal/docs/tutorials/quickstart/xrpl-quickstart.md              
   - group: Training exercises
     expanded: true
     pages:
@@ -77,3 +77,34 @@ training:
         page: developer-portal/mdx.mdx
       - label: Creating React components
         page: developer-portal/custom-component.mdx
+  - group: Petstore reference
+    expanded: false
+    pages:
+      - page: openapi/reference.page.yaml/*
+
+  - group: Admin
+    expanded: true
+    pages:
+      - group: Routine
+        expanded: true
+        pages:
+          - group: Rock
+            expanded: true
+            pages:
+              - group: Paper
+                expanded: true
+                pages:
+                  - group: Scissors
+                    expanded: true
+                    pages:
+                      - group: 1-2-3
+                        expanded: true
+                        pages:
+                          - group: Go
+                            expanded: true
+                            pages:
+                              - label: Upgrading
+                                # page: developer-portal/upgrade.md
+alternative:
+  - page: developer-portal/sidebar-alternative.md
+    label: Alternative sidebar example
