create separate sidebars for docs and blogs

--- a/developer-portal/docs/sidebars.yaml
+++ b/developer-portal/docs/sidebars.yaml
@@ -1,6 +1,6 @@
-training:
+docs:
   - page: developer-portal/index.md
-  - group: Docs
+  - group: Documentation
     expanded: true
     pages:
       - label: Introduction to the XRP Ledger 
@@ -64,18 +64,3 @@ training:
         page: developer-portal/mdx.mdx
       - label: Creating React components
         page: developer-portal/custom-component.mdx
-alternative:
-  - page: developer-portal/blog/index.md
-  - group: 2022
-    expanded: false
-    pages:
-      - label: Introducing XRPL 1.9.0
-        page: developer-portal/blog/2022/rippled-1.9.0.md
-      - label: Introducing Clio Beta
-        page: developer-portal/blog/2022/introducing-clio.md
-      - label: Announcing NFT-Devnet Reset
-        page: developer-portal/blog/2022/nft-devnet-reset.md
-      - label: Introducing XRPL 1.8.5
-        page: developer-portal/blog/2022/rippled-1.8.5.md
-      - label: Introducing XRPL 1.8.4
-        page: developer-portal/blog/2022/rippled-1.8.4.md
