build error - rename meta to seo

--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -1,4 +1,4 @@
-meta:
+seo:
   title: Redocly Training
   description: The best API documentation generator ever.
   siteUrl: https://developer-portal-starter.redoc.ly
