--- a/developer-portal/blog/sidebars.yaml
+++ b/developer-portal/blog/sidebars.yaml
@@ -11,4 +11,4 @@
     - label: Introducing XRPL 1.8.5
       page: 2022/rippled-1.8.5.md
     - label: Introducing XRPL 1.8.4
-      page: rippled-1.8.4.md
+      page: 2022/rippled-1.8.4.md
