--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -66,6 +66,8 @@ footer:
           href: 'https://xrpl.org/contribute.html'   
     - group: Support
       items:
+        - label: About
+          page: xrp-ledger-overview.mdx
         - label: FAQ
           page: faq.md
         - label: Contact us
