--- a/developer-portal/docs/sidebars.yaml
+++ b/developer-portal/docs/sidebars.yaml
@@ -30,14 +30,31 @@
       pages:
         - label: Ledger Structure
           page: concepts/understanding-xrpl/xrpl/ledger-structure.md
-        - label: Consensus
-          page: concepts/introduction/placeholder.md
-        - label: Validators
-          page: concepts/introduction/placeholder.md
+        - group: Consensus
+          page: concepts/understanding-xrpl/xrpl/consensus.md
+          expanded: false
+          pages:
+            - page: concepts/understanding-xrpl/xrpl/double-spend.md
+            - page: concepts/understanding-xrpl/xrpl/consensus-protocol-properties.md
+            - page: concepts/understanding-xrpl/xrpl/how-consensus-works.md
+            - page: concepts/understanding-xrpl/xrpl/consensus-protections.md
+            - page: concepts/understanding-xrpl/xrpl/consensus-research.md
+                  
+        - group: Validators
+          page: concepts/understanding-xrpl/xrpl/trust-based-validation.md
+          pages:
+            - page: concepts/understanding-xrpl/xrpl/fee-voting.md
+            - page: concepts/understanding-xrpl/xrpl/negative-unl.md
         - label: rippled Server
           page: concepts/introduction/placeholder.md
-        - label: Server Modes
+        - group: Server Modes
           page: concepts/introduction/placeholder.md
+          expanded: false
+          pages:
+            - page: concepts/understanding-xrpl/xrpl/parallel-networks.md
+            - page: concepts/understanding-xrpl/xrpl/federated-sidechains.md
+            - page: concepts/understanding-xrpl/xrpl/transaction-queue.md
+            - page: concepts/understanding-xrpl/xrpl/invariant-checking.md
     - group: Transactions
       expanded: false
       pages:
