--- a/developer-portal/docs/sidebars.yaml
+++ b/developer-portal/docs/sidebars.yaml
@@ -55,15 +55,30 @@
             - page: concepts/understanding-xrpl/server/parallel-networks.md
             - page: concepts/understanding-xrpl/server/federated-sidechains.md
             - page: concepts/understanding-xrpl/server/transaction-queue.md
-            - page: concepts/understanding-xrpl/server/invariant-checking.md
     - group: Transactions
       page: concepts/understanding-xrpl/transactions/transactions.md
       expanded: false
       pages:
-        - page: concepts/understanding-xrpl/transactions/transaction-structure.md
         - page: concepts/understanding-xrpl/transactions/transaction-types.md
+        - page: concepts/understanding-xrpl/transactions/source-and-destination-tags.md
+        - page: concepts/understanding-xrpl/transactions/trust-lines-and-issuing.md
+        - page: concepts/understanding-xrpl/transactions/transaction-cost.md
         - page: concepts/understanding-xrpl/transactions/transaction-malleability.md
         - page: concepts/understanding-xrpl/transactions/about-canceling-a-transaction.md
+        - page: concepts/understanding-xrpl/transactions/multi-signing.md
+        - page: concepts/understanding-xrpl/transactions/tickets.md
+        - page: concepts/understanding-xrpl/transactions/finality-of-results.md
+        - page: concepts/understanding-xrpl/transactions/invariant-checking.md
+        - group: Payment Types
+          page: concepts/understanding-xrpl/transactions/payments/payment-types.md
+          expanded: false
+          pages:
+            - page: concepts/understanding-xrpl/transactions/payments/direct-xrp-payments.md
+            - page: concepts/understanding-xrpl/transactions/payments/cross-currency-payments.md
+            - page: concepts/understanding-xrpl/transactions/payments/checks.md
+            - page: concepts/understanding-xrpl/transactions/payments/escrow.md
+            - page: concepts/understanding-xrpl/transactions/payments/partial-payments.md
+            - page: concepts/understanding-xrpl/transactions/payments/payment-channels.md
     - group: Tokens
       page: concepts/understanding-xrpl/tokens/tokens.md
       expanded: false
@@ -74,27 +89,31 @@
           pages:
             - label: Fungible Tokens
               page: concepts/understanding-xrpl/tokens/fungible.md
-            - label: Non-fungible Tokens
+            - group: Non-fungible Tokens
               page: concepts/understanding-xrpl/tokens/non-fungible.md
-
+              expanded: false
+              pages:
+                - page: concepts/understanding-xrpl/tokens/non-fungible-token-transfers.md
+        - page: concepts/understanding-xrpl/tokens/transfer-fees.md
+        - page: concepts/understanding-xrpl/tokens/paths.md
+        - page: concepts/understanding-xrpl/tokens/authorized-trust-lines.md
+        - page: concepts/understanding-xrpl/tokens/rippling.md
+        - group: Freezing Tokens
+          page: concepts/understanding-xrpl/tokens/freezing-tokens.md
+          expanded: false
+          pages:
+            - page: concepts/understanding-xrpl/tokens/common-misunderstandings-about-freezes.md
     - group: Accounts
       page: concepts/understanding-xrpl/accounts/accounts.md
       expanded: false
       pages:
-        - group: Account Structure
-          page: concepts/understanding-xrpl/accounts/account-structure.md
-          expanded: false
-          pages:
-            - label: Addresses
-              page: concepts/understanding-xrpl/accounts/addresses.md
-            - label: Balances
-              page: concepts/understanding-xrpl/accounts/balances.md
-            - label: Sequence
-              page: concepts/understanding-xrpl/accounts/sequence.md
-            - label: History
-              page: concepts/understanding-xrpl/accounts/history.md
-        - label: Account Types
-          page: concepts/understanding-xrpl/accounts/account-types.md
+        - page: concepts/understanding-xrpl/accounts/account-types.md
+        - page: concepts/understanding-xrpl/accounts/account-creating.md
+        - page: concepts/understanding-xrpl/accounts/reserves.md
+        - page: concepts/understanding-xrpl/accounts/cryptographic-keys.md
+        - page: concepts/understanding-xrpl/accounts/deposit-authorization.md
+        - page: concepts/understanding-xrpl/accounts/account-deleting.md
+    - page: concepts/understanding-xrpl/fees.md
 - group: Use Cases
   page: use-cases/use-cases.md
   expanded: false
