--- a/docs/sidebars.yaml
+++ b/docs/sidebars.yaml
@@ -60,17 +60,19 @@
       expanded: false
       pages:
         - page: concepts/understanding-xrpl/transactions/transaction-types.md
+        - page: concepts/understanding-xrpl/transactions/transaction-common-fields.md
+        - page: concepts/understanding-xrpl/transactions/transaction-metadata.md
         - page: concepts/understanding-xrpl/transactions/source-and-destination-tags.md
         - page: concepts/understanding-xrpl/transactions/trust-lines-and-issuing.md
         - page: concepts/understanding-xrpl/transactions/transaction-cost.md
         - page: concepts/understanding-xrpl/transactions/transaction-malleability.md
         - page: concepts/understanding-xrpl/transactions/about-canceling-a-transaction.md
-        - page: concepts/understanding-xrpl/transactions/multi-signing.md
+        - page: concepts/understanding-xrpl/transactions/multi-signing.md 
         - page: concepts/understanding-xrpl/transactions/tickets.md
         - page: concepts/understanding-xrpl/transactions/finality-of-results.md
         - page: concepts/understanding-xrpl/transactions/invariant-checking.md 
         - group: Payment Types
-          page: concepts/understanding-xrpl/transactions/payments/payment-types.md
+          page: concepts/understanding-xrpl/transactions/payments/payment-types.md 
           expanded: false
           pages:
             - page: concepts/understanding-xrpl/transactions/payments/direct-xrp-payments.md
@@ -79,6 +81,17 @@
             - page: concepts/understanding-xrpl/transactions/payments/escrow.md
             - page: concepts/understanding-xrpl/transactions/payments/partial-payments.md
             - page: concepts/understanding-xrpl/transactions/payments/payment-channels.md
+        - group: Transaction Results
+          page: concepts/understanding-xrpl/transactions/transaction-results/transaction-results.md
+          expanded: false
+          pages:
+            - page: concepts/understanding-xrpl/transactions/transaction-results/tec-codes.md
+            - page: concepts/understanding-xrpl/transactions/transaction-results/tef-codes.md
+            - page: concepts/understanding-xrpl/transactions/transaction-results/tel-codes.md
+            - page: concepts/understanding-xrpl/transactions/transaction-results/tem-codes.md
+            - page: concepts/understanding-xrpl/transactions/transaction-results/ter-codes.md
+            - page: concepts/understanding-xrpl/transactions/transaction-results/tes-success.md 
+
     - group: Tokens
       page: concepts/understanding-xrpl/tokens/tokens.md
       expanded: false
