--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@redocly/developer-portal": "1.1.0-beta.101",
     "jquery": "^3.6.0",
     "babel-plugin-preval": "^5.1.0",
+    "bootstrap": "^5.2.0",
     "fs": "^0.0.1-security",
     "jssoup": "^0.0.15",
     "marked": "^4.0.18",
-    "preval.macro": "^5.0.0"
+    "preval.macro": "^5.0.0",
+    "react-bootstrap": "^2.5.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14"
