--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -48,18 +48,39 @@ nav:
 
 # Footer configuration ---------------------------------------------------------
 footer:
-  copyrightText: Copyright © 2022 XRP Ledger. Open Source.
+  copyrightText: Copyright © 2022 XRP Ledger.
   columns:
     - group: About
       items:
         - page: about/xrp-ledger-overview.mdx
+        - page: about/use-cases.mdx
+        - page: about/history.mdx
+        - label: Ledger Explorer
+          link: https://livenet.xrpl.org/
+        - page: about/xrp-overview.mdx
+        - page: about/impact.mdx
+        - page: about/carbon-calculator.mdx
+        - label: XRPL Foundation
+          link: https://foundation.xrpl.org/
+        - page: about/faq.mdx
     - group: Docs
       items:
         - page: docs/index.md
         - page: docs/concepts/introduction/intro-to-xrpl.md
-          label: Introduction to the XRP Ledger
+        - page: docs/tutorials/index.md
+        - page: docs/references/index.mdx
+        - page: docs/code-samples/index.mdx
+        - page: docs/dev-tools/index.md
     - group: Community
       items:
         - page: community/index.mdx
         - page: community/contribute-code.md
+        - page: community/events.mdx
+        - page: community/ambassadors.mdx
+        - label: XRPL Jobs
+          link: https://jobs.xrpl.org/
+        - label: Dev Blog
+          page: blog/index.md
+        - label: GitHub
+          link: https://github.com/XRPLF/
         - page: community/report-a-scam.md
