--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@redocly/developer-portal": "1.1.0-beta.101",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "react-bootstrap": "^2.5.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14"
