--- a/top-nav.yaml
+++ b/top-nav.yaml
@@ -58,6 +58,8 @@ nav:
         items:
           - label: Quickstart
             link: /docs/tutorials/quickstart
+          - label: Code Samples 
+            link: /docs/code-samples
       - group: API Reference
         items:
           - label: Client Libraries
@@ -74,6 +76,7 @@ nav:
             href: /dev-tools/xrp-faucets/
           - label: XRPL Servers
             href: /infrastructure/xrpl-servers/
+      
 
   - group: Community
     items:
