Add Use Cases page (#15)
* Convert main body initial pass

* Add main classes

* Rename url

* Add History and remove unnecessary comments

* Undo site config changes

* Use prefix and add redirect

* Add prefix to usecases

* fix light theme text display issue

* add styled pages

* fixed history read more button

* wip xrp-overview

* xrp overview complete

* fixes for xrp overview

* events page done

* ambassador page done

* ambassadors fixed button + clean up

* faq page finished

* fix spacing  + background

* impact draft

* impact fix

* community page finished

* try heading font weight fix

* style fixes

* fix css displaying errors

* try css fix 2

* fix 3

* fix 4

* try fix 5

* fix 6

* final fix for image sizing

Co-authored-by: jonathanlei <jonathanlei98@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@redocly/developer-portal": "1.1.0-beta.101",
-    "jquery": "^3.6.0",
     "babel-plugin-preval": "^5.1.0",
     "bootstrap": "^5.2.0",
     "fs": "^0.0.1-security",
+    "html-react-parser": "^3.0.1",
+    "jquery": "^3.6.0",
     "jssoup": "^0.0.15",
+    "lottie-web": "^5.9.6",
     "marked": "^4.0.18",
     "preval.macro": "^5.0.0",
     "react-bootstrap": "^2.5.0"
