almost complete - need to fix light card bg color

--- a/docs/sidebars.yaml
+++ b/docs/sidebars.yaml
@@ -1,4 +1,4 @@
-- page: index.md
+- page: index.mdx
 - group: Introduction to the XRPL
   page: concepts/introduction/intro-to-xrpl.md
   expanded: false
